# imfcharts

./: .gitignore  README.md  __init__.py  charts.py  get_example_data.py  plot_example_mpl.py  pyproject.toml
data/: usgdp.csv
data/turkey_page1/: fig1_chart3_ip.csv  fig1_chart4_confidence.csv  fig1_chart5_partners.csv  fig1_chart6_trade.csv
data/turkey_page2/: fig2_chart2_sequential_inflation.csv  fig2_chart4_inflation_forecast.csv  fig2_chart5_inflation_expectations.csv  fig2_chart6_credit.csv
data/turkey_page3/: fig3_chart1_wage.csv  fig3_chart2_labor.csv  fig3_chart3_unemp.csv  fig3_chart4_participation.csv  fig3_chart5_compensation.csv  (+1 more)
doc/: imfcharts.qmd  styles.css
examples/: copy_TUR_dmxe.py  examples.R  examples.py  examples_area.py  examples_axistitles.py  examples_bars.py  examples_fill.py  examples_legend.py  examples_lines.py  examples_lines_rects.py  examples_text_arrow_fill.py  examples_ticks.py  examples_titles.py  examples_turkey_page1.R  examples_turkey_page1.py  examples_turkey_page1.py~  examples_turkey_page2.py  examples_turkey_page3.py  examples_turkey_page3.py~  examples_turkey_page4.py  examples_turkey_page4.py~  examples_turkey_page5.py  examples_turkey_page6.py  examples_turkey_page6.py~  examples_watermark.py  get_data_turkey_page1.py  get_data_turkey_page2.py~  get_data_turkey_page3.py  get_data_turkey_page4.py  get_data_turkey_page5.py  get_data_turkey_page6.py  runall.py
mpl/: __init__.py  cycle-contrast.mplstyle  cycle-tints.mplstyle  fund-guide.mplstyle  imf-articleiv.mplstyle
tests/: test_import.py  test_spec.py
(+20 files in other folders)
